--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 </div>
             </section>
             <section class="footer">
-                <p>Copyright &copy; 2018 Company Name . Design: <a href="" target="_blank">Sentra</a> More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+                <p>Copyright &copy; 2018 MoTec . Design: <a href="" target="_blank">Moses</a>
             </section>
         </div>
 
