--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Sentra HTML CSS Template</title>
+        <title>MoTec Index</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -49,7 +49,8 @@
 
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
-                <a href="#">Sen<em>tra</em></a>
+				<!-- <em>tra</em> 强调，斜体表示 -->
+                <a href="#">MoTec</a>
             </div>
             <nav>
                 <ul>
@@ -114,7 +115,7 @@
                     <div class="image"></div>
                     <div class="info">
                         <div>
-                          <h1>Beautiful Template<br>Sentra</h1>
+                          <h1>Beautiful Template<br>MoTec</h1>
                           <p>This is a HTML CSS template provided by 
                           			<a href="#" target="_blank">template</a> website.<br>
                           			Please tell your friends about our site.</p>
@@ -576,7 +577,7 @@
                 </div>
                 <div id="contact-content">
                     <div class="section-heading">
-                        <h1>Contact<br><em>Sentra</em></h1>
+                        <h1>Contact<br><em>MoTec</em></h1>
                         <p>Curabitur hendrerit mauris mollis ipsum vulputate rutrum. 
                         <br>Phasellus luctus odio eget dui imperdiet.</p>
                         
