edit social icons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li><a href="#projects">Recent Projects</a></li>
                         <li><a href="#video">Presentation</a></li>
                         <li><a href="#blog">Blog Entries</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="#contact">Contact Me</a></li>
                     </ul>
                 </nav>
             </div>
@@ -99,11 +99,13 @@
                 </ul>
             </nav>
             <ul class="social-icons">
+				<li><a href="#"><i class="fa fa-github"></i></a></li>
+				<li><a href="#"><i class="fa fa-cuttlefish"></i></a></li>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                <!--<li><a href="#"><i class="fa fa-rss"></i></a></li>-->
+                <!--<li><a href="#"><i class="fa fa-behance"></i></a></li>-->
             </ul>
         </div>
 
@@ -337,7 +339,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                            <h1>This is a <em>company</em> presentation.</h1>
+                            <h1>This is a <em>person</em> presentation.</h1>
                             <p>Praesent pellentesque efficitur magna, sed pellentesque neque malesuada vitae.</p>
                         </div>
                         <div class="text-content">
