add social icon link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </ul>
             </nav>
             <ul class="social-icons">
-				<li><a href="#"><i class="fa fa-github"></i></a></li>
+				<li><a href="https://github.com/MoTec95"><i class="fa fa-github"></i></a></li>
 				<li><a href="#"><i class="fa fa-cuttlefish"></i></a></li>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
