--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <a href="#contact">
                             <span class="rect"></span>
                             <span class="circle"></span>
-                            Contact Us
+                            Contact Me
                         </a>
                     </li>
                 </ul>
