--- a/parse/parse.html
+++ b/parse/parse.html
@@ -50,7 +50,7 @@
     <div class="col-md-14 column">
       <div class="panel panel-default">
         <div id="kj" class="panel-body">
-          <iframe src="ks.html?123123" id="player" width="100%" height="600px" allowTransparency="true"
+          <iframe src="google.com" id="player" width="100%" height="600px" allowTransparency="true"
             allowfullscreen="true" frameborder="0" scrolling="no"></iframe>
         </div>
       </div>
@@ -66,17 +66,16 @@
       <div class="input-group" style="width: 100%;">
         <span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
         <select class="form-control input-lg" id="jk">
-          <option value="http://jx.du2.cc/?url=" selected="">5号通用vip引擎系统【全网解析】</option>
-          <option value="http://jx.598110.com/?url=" selected="">4号通用vip引擎系统【超级稳定通用】</option>
-          <option value="http://jx.618ge.com/?url=" selected="">3号通用vip引擎系统【稳定通用】</option>
-          <option value="http://vip.jlsprh.com/?url=" selected="">2号通用vip引擎系统【稳定通用】</option>
-          <option value="http://jx.598110.com/?url=" selected="">1号通用vip引擎系统【稳定通用】</option>
-          <option value="http://jx.drgxj.com/?url=" selected="">0号无广告超速解析【通用】</option>
+          <option value="http://jx.598110.com/?url=" selected="">5号通用vip引擎系统【超级稳定通用】</option>
+          <option value="http://jx.618ge.com/?url=" selected="">4通用vip引擎系统【稳定通用】</option>
+          <option value="http://vip.jlsprh.com/?url=" selected="">3号通用vip引擎系统【稳定通用】</option>
+          <option value="http://jx.598110.com/?url=" selected="">2号通用vip引擎系统【稳定通用】</option>
+          <option value="http://jx.drgxj.com/?url=" selected="">1号无广告超速解析【通用】</option>
+          <option value="http://jx.du2.cc/?url=" selected="true">0号通用vip引擎系统【全网解析】</option>
         </select>
-
       </div>
       <br>
-
+      
       <div class="input-group" style="width: 100%; ">
         <span class="input-group-addon input-lg" style="width: 80px;">播放地址</span>
         <input class="form-control input-lg" type="search" placeholder="电脑使用 Ctrl+V 粘贴网址 - 手机长按粘贴网址" id="url">
@@ -85,16 +84,17 @@
       <div>
         <button id="bf" type="button" class="btn btn-success btn-lg btn-block hidden-xs" onClick="parse()">开始解析</button>
         <button id="bf" type="button" class="btn btn-success btn-lg btn-block hidden-xs"
-          onClick="fullscreen()">全屏解析</button>
+        onClick="fullscreen()">全屏解析</button>
         <button id="bf" type="button" class="btn btn-success btn-lg btn-block visible-xs"
-          onClick="parse()">点击解析</button>
+        onClick="parse()">点击解析</button>
         <button id="bf" type="button" class="btn btn-success btn-lg btn-block visible-xs"
-          onClick="fullscreen()">点击全屏解析</button>
-
+        onClick="fullscreen()">点击全屏解析</button>
+        
         <a href=# rel="sidebar" onclick="javascript:addFavorite()" style="text-decoration: none;">
           <button id="bf" type="button" class="btn btn-success btn-lg btn-block" style="margin-top:5px;">加入收藏
           </button>
         </a>
+        <span style="color: red;">如果解析失败，请切换接口地址</span>        
       </div>
 
       <!--ad-->
