--- a/parse/parse.html
+++ b/parse/parse.html
@@ -50,7 +50,7 @@
     <div class="col-md-14 column">
       <div class="panel panel-default">
         <div id="kj" class="panel-body">
-          <iframe src="google.com" id="player" width="100%" height="600px" allowTransparency="true"
+          <iframe src="ks.html" id="player" width="100%" height="600px" allowTransparency="true"
             allowfullscreen="true" frameborder="0" scrolling="no"></iframe>
         </div>
       </div>
@@ -94,7 +94,7 @@
           <button id="bf" type="button" class="btn btn-success btn-lg btn-block" style="margin-top:5px;">加入收藏
           </button>
         </a>
-        <span style="color: red;">如果解析失败，请切换接口地址</span>        
+        <span style="color: red;">如果解析失败，请切换接口</span>        
       </div>
 
       <!--ad-->
