--- a/parse/parse.html
+++ b/parse/parse.html
@@ -66,12 +66,12 @@
       <div class="input-group" style="width: 100%;">
         <span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
         <select class="form-control input-lg" id="jk">
-          <option value="http://jx.598110.com/?url=" selected="">5号通用vip引擎系统【超级稳定通用】</option>
-          <option value="http://jx.618ge.com/?url=" selected="">4通用vip引擎系统【稳定通用】</option>
-          <option value="http://vip.jlsprh.com/?url=" selected="">3号通用vip引擎系统【稳定通用】</option>
-          <option value="http://jx.598110.com/?url=" selected="">2号通用vip引擎系统【稳定通用】</option>
-          <option value="http://jx.drgxj.com/?url=" selected="">1号无广告超速解析【通用】</option>
-          <option value="http://jx.du2.cc/?url=" selected="true">0号通用vip引擎系统【全网解析】</option>
+          <option value="https://jx.598110.com/?url=" selected="">5号通用vip引擎系统【超级稳定通用】</option>
+          <option value="https://jx.618ge.com/?url=" selected="">4号通用vip引擎系统【稳定通用】</option>
+          <option value="https://vip.jlsprh.com/?url=" selected="">3号通用vip引擎系统【稳定通用】</option>
+          <option value="https://jx.598110.com/?url=" selected="">2号通用vip引擎系统【稳定通用】</option>
+          <option value="https://jx.drgxj.com/?url=" selected="">1号无广告超速解析【通用】</option>
+          <option value="https://jx.du2.cc/?url=" selected="true">0号通用vip引擎系统【全网解析】</option>
         </select>
       </div>
       <br>
