add AdSense script

--- a/parse/parse.html
+++ b/parse/parse.html
@@ -28,6 +28,7 @@
     }
 
   </script>
+  <script data-ad-client="ca-pub-7989236567586340" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body background="./bj.png">
@@ -97,6 +98,7 @@
         <span style="color: red;">如果解析失败，请切换接口</span>        
       </div>
 
+      
       <!--ad-->
       <div style="clear:both">
         <div class="container">
