add AdSense script

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 active_key: home
 ---
+<head>
+    <script data-ad-client="ca-pub-7989236567586340" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
 
 {%- for section in site.data.links -%}
     <div class="ui vertical stripe links segment">
