--- a/notebook/index.html
+++ b/notebook/index.html
@@ -8,13 +8,15 @@
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
   <!-- import JavaScript -->
   <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <!-- import jquery -->
+  <script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="app">
-    <el-button @click="visible = true">Button</el-button>
-    <el-dialog :visible.sync="visible" title="Hello world">
-      <p>Try Element</p>
-    </el-dialog>
+    <el-button @click="click">Button</el-button>
   </div>
 </body>
   <script>
@@ -22,6 +24,17 @@
       el: '#app',
       data: function() {
         return { visible: false }
+      },
+      methods: {
+          click: function(){
+              console.log('click...');
+              $.ajax({
+              url: "http://api.k780.com/?app=weather.today&weaId=1&appkey=10003&sign=b59bc3ef6191eb9f747dd4e83c99f2a4&format=json",            
+              success: function( result ) {
+                  console.log(result);
+              }
+            });
+          }
       }
     })
   </script>
