--- a/notebook/index.html
+++ b/notebook/index.html
@@ -13,29 +13,31 @@
     src="https://code.jquery.com/jquery-3.6.0.js"
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
   <div id="app">
-    <el-button @click="click">Button</el-button>
+    <el-container class="whole-screen">
+      <el-aside class="directory" width="250px">
+        <el-tree
+          class="directory"
+          :data="dirs"
+          node-key="id"
+          default-expand-all
+          @node-click="handleNodeClick">
+          <span slot-scope="{ node, data }">
+            <i v-if="data.children" class="el-icon-folder-opened"></i>
+            <span>{{ node.label }}</span>
+          </span>
+        </el-tree>
+      </el-aside>
+      <el-container>
+        <el-header>Header</el-header>
+        <el-main>Main</el-main>
+        <el-footer>Footer</el-footer>
+      </el-container>
+    </el-container>
   </div>
 </body>
-  <script>
-    new Vue({
-      el: '#app',
-      data: function() {
-        return { visible: false }
-      },
-      methods: {
-          click: function(){
-              console.log('click...');
-              $.ajax({
-              url: "https://sapi.k780.com/?app=weather.today&weaId=1&appkey=10003&sign=b59bc3ef6191eb9f747dd4e83c99f2a4&format=json",            
-              success: function( result ) {
-                  console.log(result);
-              }
-            });
-          }
-      }
-    })
-  </script>
+  <script src="js/index.js"></script>
 </html>
