--- a/notebook/index.html
+++ b/notebook/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title>Moses's Blog</title>
+  <link rel="shortcut icon" href="images/logo.png">
   <!-- import CSS -->
   <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
   <!-- import Vue before Element -->
@@ -20,7 +22,9 @@
 <body>
   <div id="app">
     <el-container class="whole-screen">
-      <el-header>Header</el-header>
+      <el-header>
+        <img src="images/logo.png" style="width: 70px; height:70px;"/>
+      </el-header>
       <el-container>        
         <el-aside class="directory" width="250px">
           <div class="search">
